# mq

./: .gitignore  .nojekyll  Makefile  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  justfile  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
_examples/: embed_ipynb.qmd  new_draft.ipynb  new_draft.qmd
mq-blog/: .gitignore  pyproject.toml
mq-blog/posts/on_postgres_concurrency/: postgres1.excalidraw
posts/cloudfront_apprunner/: cloudfront_apprunner.md
posts/compare_df_pandas/: __indexx.qmd  index.html  index.ipynb  index.qmd  pyproject.toml
posts/harness-macos-spaces/: harness-macos-spaces.html  harness-macos-spaces.md
posts/just-make/: just-make.html  just-make.ipynb
posts/on_postgres_concurrency/: index.html  index.ipynb  pyproject.toml
posts/post-with-code/: index.html  index.qmd
posts/ssh_key_add/: ssh_key_add.html  ssh_key_add.md
posts/variance/: index.html  variance-preview.html  variance.ipynb  variance.out.ipynb  variance.qmd
posts/welcome/: index.html  index.qmd
posts/xx/: xx.html
