[tool.poetry]
name = "mq-blog"
version = "0.1.0"
description = ""
authors = ["Mihas <mihasK@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
scipy = "^1.14.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
