[tool.poetry]
name = "compare-df-pandas"
version = "0.1.0"
description = ""
authors = ["Mihas <mihasK@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
