[tool.poetry]
name = "on-postgres-concurrency"
version = "0.1.0"
description = ""
authors = ["Mihas <mihasK@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
